--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "07-restserver",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^2.0.1",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.3",
-    "mongoose": "^5.0.16",
-    "mongoose-unique-validator": "^2.0.0",
-    "underscore": "^1.9.0"
-  }
+    "name": "07-restserver",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node server/server",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^2.0.1",
+        "body-parser": "^1.18.2",
+        "express": "^4.16.3",
+        "mongoose": "^5.0.16",
+        "mongoose-unique-validator": "^2.0.0",
+        "underscore": "^1.9.0"
+    }
 }
